[package]
name = "seamonkey"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = ["protocol-asset"] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1.10.4"
portpicker = "0.1"
tauri-plugin-localhost = "2.0.0-beta"
tauri-plugin-dialog = "2.0.0-beta.7"
tauri-plugin-fs = "2.0.0-beta.7"
tauri-plugin-http = "2.0.0-beta.7"

[dependencies.tauri-plugin-sql]
features = ["sqlite"] # or "postgres", or "mysql"
version = "2.0.0-beta"
